Implementação da classe controladora da tela.

--- a/knn/src/main/resources/br/com/ufu/pgc204/knn/i18n/messages.properties
+++ b/knn/src/main/resources/br/com/ufu/pgc204/knn/i18n/messages.properties
@@ -1,13 +1,26 @@
-#
-# Created by JFormDesigner on Sun Apr 08 11:58:56 BRT 2018
-#
 
-btnSearch.toolTipText=Selecionar arquivo de amostras...
-btnExecute.text=Executar
-chkZScore.text=Normalizar dados (z-score)
-lblKFold.text=Partições k-fold\:
-lblAbout.toolTipText=Sobre o k-NN
-lblAmostras.text=Amostras\:
-txtAmostras.text=Selecione o arquivo de amostras...
-txtKFold.text=2
-titulo=k Nearest Neighbor (k-NN)
+btnExecute.text = Executar
+
+btnSearch.toolTipText = Selecionar arquivo de amostras...
+
+chkZScore.text = Normalizar dados (z-score)
+
+lblAbout.toolTipText = Sobre o k-NN
+
+lblAmostras.text = Amostras
+
+lblKFold.text = Parti\u00E7\u00F5es k-fold
+
+msg.arquivo.amostras.invalido  = Arquivo de amostras com formato inv\u00E1lido
+msg.campo.xxx.obrigatorio      = O campo "{0}" \u00E9 de preenchimento obrigat\u00F3rio
+msg.cancelar                   = Cancelar
+msg.confirmacao.sair.sistema   = Deseja sair do sistema?
+msg.falha.carregar.lookandfeel = Falha ao carregar o LookAndFeel
+msg.falha.iniciar.sistema      = Falha ao iniciar o sistema
+msg.sair                       = Sair
+
+titulo = k Nearest Neighbor (k-NN)
+
+txtAmostras.text = Selecione o arquivo de amostras...
+
+txtKFold.text = 2
