--- a/knn/src/main/resources/br/com/ufu/pgc204/knn/i18n/messages.properties
+++ b/knn/src/main/resources/br/com/ufu/pgc204/knn/i18n/messages.properties
@@ -11,13 +11,14 @@ lblAmostras.text = Amostras
 
 lblKFold.text = Parti\u00E7\u00F5es k-fold
 
-msg.arquivo.amostras.invalido  = Arquivo de amostras com formato inv\u00E1lido
-msg.campo.xxx.obrigatorio      = O campo "{0}" \u00E9 de preenchimento obrigat\u00F3rio
-msg.cancelar                   = Cancelar
-msg.confirmacao.sair.sistema   = Deseja sair do sistema?
-msg.falha.carregar.lookandfeel = Falha ao carregar o LookAndFeel
-msg.falha.iniciar.sistema      = Falha ao iniciar o sistema
-msg.sair                       = Sair
+msg.arquivo.amostras.invalido       = Arquivo de amostras com formato inv\u00E1lido
+msg.campo.xxx.obrigatorio           = O campo "{0}" \u00E9 de preenchimento obrigat\u00F3rio
+msg.cancelar                        = Cancelar
+msg.confirmacao.sair.sistema        = Deseja sair do sistema?
+msg.falha.carregar.arquivo.amostras = Falha ao carregar arquivo de amostras
+msg.falha.carregar.lookandfeel      = Falha ao carregar o LookAndFeel
+msg.falha.iniciar.sistema           = Falha ao iniciar o sistema
+msg.sair                            = Sair
 
 titulo = k Nearest Neighbor (k-NN)
 
