Inicio da implementação da validação cruzada: k-fold

--- a/knn/src/main/resources/br/com/ufu/pgc204/knn/i18n/messages.properties
+++ b/knn/src/main/resources/br/com/ufu/pgc204/knn/i18n/messages.properties
@@ -23,6 +23,8 @@ msg.falha.iniciar.sistema            = Falha ao iniciar o sistema
 msg.informe.valor.divisor.para.kfold = Informe no campo "{0}" um valor divisor de "{1}"
 msg.sair                             = Sair
 
+msgs.informe.valor.valido.para.xxx = Informe um valor v\u00E1lido para o campo "{0}"
+
 titulo = k Nearest Neighbor (k-NN)
 
 txtAmostras.text = Selecione o arquivo de amostras...
